--- a/story/story_css/story_6.css
+++ b/story/story_css/story_6.css
@@ -1,11 +1,193 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@100&family=Montserrat+Alternates:wght@100;200;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
+
+@media (max-width: 1100px) {
+    .text {
+        width: 120px !important;
+        transition: width 0.3s ease-in-out;
+    }
+
+    .fixed-iframe {
+        top: 15px !important; /* 根据需要调整 */
+    }
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-.navbar {
+.navbar, .navbar ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar{
+    position: absolute;
+    padding: 5px;
+    background-color: #ffffff35;
+    border-radius: 50px;
+    height: 50px;
+    top: 4%;
+    left: 3%;
+    display: flex;
+    z-index: 10;
+}
+
+.navbar input {
+    width: 40px;
+    height: 40px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.navbar span {
+    position: absolute;
+    left: 15px;
+    width: 20px;
+    height: 2px;
+    top: calc(50% - 10px);
+    border-radius: 15px;
+    background-color: rgb(216, 206, 226);
+    pointer-events: none;
+    transition: transform 0.3s ease-in-out, top 0.3s ease-in-out
+;
+}
+
+.navbar span:nth-child(3) {
+    top: calc(50% + 6px);
+}
+
+.navbar ul {
+    width: 0;
+    overflow: hidden;
+    transition: all 0.5s;
+    white-space: nowrap;
+}
+
+.navbar ul li {
+    list-style: none;
+    margin: 0px 15px;
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: rgb(216, 206, 226);
+}
+
+.navbar ul li a:hover {
+    color:rgb(17, 14, 32);
+}
+
+.navbar input:checked ~ ul{
+    width: 400px;
+}
+
+.navbar input:checked ~ span:nth-child(2){
+    margin: 8px;
+    top: calc(50% -10px);
+    transform: rotate(-45deg);
+    background-color:  rgb(216, 206, 226);
+    transition: top 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.navbar input:checked ~ span:nth-child(3){
+    margin: 7px;
+    top: calc(50% - 5px);
+    transform: rotate(45deg);
+    background-color: rgb(216, 206, 226);
+    transition: top 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+body,
+html,
+main{
+    width: 100%;
+    height: 100%;
+    background: rgb(17, 14, 32);
+}
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/*.container {*/
+/*    width: 100%;*/
+/*    height: 100vh;*/
+/*    display: flex;*/
+/*    justify-content: space-around;*/
+/*}*/
+/*.box2 {*/
+/*    position: relative;*/
+/*    width: 40%;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    background-image: url(../img/chart_01.svg);*/
+/*    background-repeat: no-repeat;*/
+/*    background-position: center;*/
+/*    background-size: contain;*/
+
+/*    !* top: 100px;*/
+/*    left: 120px; *!*/
+/*}*/
+/*.ball,.chart {*/
+/*    position: absolute;*/
+/*}*/
+/*.ball {*/
+/*    width: 112%;*/
+/*    height: 72%;*/
+/*    right: -30px;*/
+/*    top: 120px;*/
+/*}*/
+
+/*.chart {*/
+/*    width: 100%;*/
+/*    z-index: 1;*/
+/*    top: 136px;*/
+/*    left: -4px;*/
+/*}*/
+
+.div_container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ball {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.container {
+    position: relative;
+}
+
+.chart {
+    width: 100%;
+    height: auto;
+}
+
+.fixed-iframe {
+    position: absolute;
+    top: 25px; /* 根据需要调整 */
+    left: 0; /* 根据需要调整 */
+    width: 100%; /* 根据需要调整 */
+    height: 100%; /* 根据需要调整 */
+}
+
+:deep(.spline-watermark){
+    display: none;
+}
+
+/* .navbar {
     position: fixed;
     margin-top: 0px;
     margin-bottom: 10px;
@@ -21,21 +203,10 @@
     font-weight: 200;
     color: white;
     font-size: 25px;
-}
-body,
-html,
-main{
-    width: 100%;
-    height: 100%;
-    background: rgb(17, 14, 32);
-}
-.main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.heart_rate {
+} */
+
+
+/* .heart_rate {
     position: relative;
     margin: 20px auto;
     width: 150px;
@@ -250,12 +421,4 @@ main{
   .sound {
     position: absolute;
     top: 15px;
-  }
-
-  .ball {
-    width: 100%;
-    height: 80%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
+  } */
