--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,8 @@ html,
 .header {
     position: fixed;
     /* height: 10%; */
-    top: 15px;
-    z-index: 9;
+    top: 16px;
+    z-index: 8;
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -62,7 +62,7 @@ html,
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 200;
     color: white;
-    font-size: 25px;
+    font-size: 24px;
     cursor: pointer;
 }
 .box_one {
@@ -81,7 +81,7 @@ html,
     font-family: 'Yellowtail', cursive;
     color: rgb(255 255 255);
     text-align: center;
-    font-size: 70px;
+    font-size: 72px;
     position: absolute;
     top: 35%;
 }
@@ -89,22 +89,22 @@ html,
     font-family: 'Montserrat Alternates', sans-serif;
     color: rgb(255 255 255);
     text-align: center;
-    font-size: 150px;
+    font-size: 152px;
     font-weight: 600;
     position: absolute;
     top: 45%;
 }
 .scroll1 {
     width: 100%;
-    height: 15%;
+    height: 16%;
     display: flex;
     justify-content: center;
 }
 #scroll1 {
     position: absolute;
-    width: 25px;
-    height: 60px;
-    bottom: 30px;
+    width: 24px;
+    height: 64px;
+    bottom: 32px;
 }
 #dot {
     width: 10px;
@@ -131,7 +131,7 @@ justify-content: center;
 align-items: center;
 text-align: center;
 color: white;
-padding: 20px;
+padding: 24px;
 box-sizing: border-box;
 top: -210vh;
 }
@@ -154,8 +154,8 @@ height: auto;
     font-family: 'Montserrat Alternates', sans-serif;
     color: rgb(255 255 255);
     text-align: center;
-    font-size: 60px;
-    top: 250px;
+    font-size: 64px;
+    top: 240px;
     font-weight: 200;
 }
 .text p{
@@ -164,17 +164,17 @@ height: auto;
     font-family: 'Montserrat Alternates', sans-serif;
     color: rgb(255 255 255);
     text-align: center;
-    font-size: 30px;
+    font-size: 32px;
     font-weight: 100,bold;
-    top: 350px;
+    top: 360px;
 }
 .text h6 {
-    width: 550px;
+    width: 560px;
     position: absolute;
     font-family: 'Montserrat Alternates', sans-serif;
     color: rgb(255 255 255);
     text-align: center;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: 100;
     top: 100%;
 }
@@ -203,7 +203,7 @@ height: auto;
 }
 .all_branch {
     position: absolute;
-    top: 65%;
+    top: 64%;
     transform: translateY(-55%);
 }
 .day1 {
@@ -219,6 +219,11 @@ height: auto;
     background-color: rgba(38, 6, 86, 0.47);
     left: -4px;
     cursor: pointer;
+    animation: shining 4s infinite;
+    box-shadow:     
+    0 0 16px rgba(38, 6, 86, 0.32),
+    0 0 48px rgba(61, 11, 95, 0.24),
+    0 0 64px rgba(65, 21, 109, 0.16);;
 }
 .mood1 {
     width: 85px;
@@ -254,6 +259,11 @@ height: auto;
     top: 5px;
     left: 15px;
     cursor: pointer;
+    animation: shining 4s infinite;
+    box-shadow:     
+    0 0 16px rgba(208, 37, 119, 0.32),
+    0 0 48px rgba(61, 11, 95, 0.24),
+    0 0 64px rgba(65, 21, 109, 0.16);;
 }
 .mood2 {
     position: absolute;
@@ -288,6 +298,11 @@ height: auto;
     background-color: rgba(38, 6, 86, 0.47);
     left: -4px;
     cursor: pointer;
+    animation: shining 4s infinite;
+    box-shadow:     
+    0 0 16px rgba(38, 6, 86, 0.32),
+    0 0 48px rgba(61, 11, 95, 0.24),
+    0 0 64px rgba(65, 21, 109, 0.16);;
 }
 .mood3 {
     width: 85px;
@@ -322,6 +337,11 @@ height: auto;
     background-color: rgba(38, 6, 86, 0.47);
     left: -5px;
     cursor: pointer;
+    animation: shining 4s infinite;
+    box-shadow:     
+    0 0 16px rgba(38, 6, 86, 0.32),
+    0 0 48px rgba(61, 11, 95, 0.24),
+    0 0 64px rgba(65, 21, 109, 0.16);;
 }
 .mood4 {
     width: 75px;
@@ -356,6 +376,11 @@ height: auto;
     background-color:rgb(208 37 119 / 40%);
     left: -5px;
     cursor: pointer;
+    animation: shining 4s infinite;
+    box-shadow:     
+    0 0 16px rgba(208, 37, 119, 0.32),
+    0 0 48px rgba(61, 11, 95, 0.24),
+    0 0 64px rgba(65, 21, 109, 0.16);;
 }
 .mood5 {
     width: 75px;
@@ -391,6 +416,11 @@ height: auto;
     left: 5px;
     top: 5px;
     cursor: pointer;
+    animation: shining 4s infinite;
+    box-shadow:     
+    0 0 16px rgba(208, 37, 119, 0.32),
+    0 0 48px rgba(61, 11, 95, 0.24),
+    0 0 64px rgba(65, 21, 109, 0.16);;
 }
 .mood6 {
     width: 85px;
@@ -426,6 +456,11 @@ height: auto;
     left: -8px;
     top: -5px;
     cursor: pointer;
+    animation: shining 4s infinite;
+    box-shadow:     
+    0 0 16px rgba(38, 6, 86, 0.32),
+    0 0 48px rgba(61, 11, 95, 0.24),
+    0 0 64px rgba(65, 21, 109, 0.16);;
 }
 .mood7 {
     width: 85px;
@@ -448,236 +483,236 @@ height: auto;
     cursor: pointer;
 }
 .hover_text1 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 30px;
-    width: 100px;
-    left: -70px;
+    top: 32px;
+    width: 128px;
+    left: -128px;
     cursor: default;
 }
 .hover_text2 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 30px;
-    width: 100px;
-    left: -70px;
+    top: 32px;
+    width: 128px;
+    left: -120px;
     cursor: default;
 }
 .hover_text3 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 26px;
-    width: 100px;
-    left: -70px;
+    top: 16px;
+    width: 128px;
+    left: -128px;
     cursor: default;
 }
 .hover_text4 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 25px;
-    width: 100px;
-    left: 90px;
+    top: 40px;
+    width: 128px;
+    left: 120px;
     cursor: default;
 }
 .hover_text5 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 20px;
-    width: 100px;
-    left: 60px;
+    top: 24px;
+    width: 128px;
+    left: 88px;
     cursor: default;
 }
 .hover_text6 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 20px;
-    width: 100px;
-    left: 40px;
+    top: 16px;
+    width: 128px;
+    left: 64px;
     cursor: default;
 }
 .hover_text7 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 5px;
-    width: 100px;
-    left: -50px;
+    top: 40px;
+    width: 128px;
+    left: -128px;
     cursor: default;
 }
 .hover_text8 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 15px;
-    width: 100px;
-    left: -50px;
+    top: 32px;
+    width: 128px;
+    left: -128px;
     cursor: default;
 }
 .hover_text9 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 20px;
-    width: 100px;
-    left: -60px;
+    top: 16px;
+    width: 128px;
+    left: -136px;
     cursor: default;
 }
 .hover_text10 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 15px;
-    width: 100px;
-    left: 80px;
+    top: 32px;
+    width: 128px;
+    left: 104px;
     cursor: default;
 }
 .hover_text11 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 20px;
-    width: 100px;
-    left: 60px;
+    top: 24px;
+    width: 128px;
+    left: 80px;
     cursor: default;
 }
 .hover_text12 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 25px;
-    width: 100px;
-    left: 30px;
+    top: 16px;
+    width: 128px;
+    left: 56px;
     cursor: default;
 }
 
 .hover_text13 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 15px;
-    width: 100px;
-    left: -70px;
+    top: 32px;
+    width: 128px;
+    left: -128px;
     cursor: default;
 }
 .hover_text14 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 15px;
-    width: 100px;
-    left: -65px;
+    top: 24px;
+    width: 128px;
+    left: -120px;
     cursor: default;
 }
 .hover_text15 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 15px;
-    width: 100px;
-    left: -70px;
+    top: 16px;
+    width: 128px;
+    left: -136px;
     cursor: default;
 }
 
 .hover_text16 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 15px;
-    width: 100px;
-    left: 80px;
+    top: 48px;
+    width: 128px;
+    left: 112px;
     cursor: default;
 }
 .hover_text17 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 20px;
-    width: 100px;
-    left: 65px;
+    top: 32px;
+    width: 128px;
+    left: 88px;
     cursor: default;
 }
 .hover_text18 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 25px;
-    width: 100px;
-    left: 40px;
+    top: 16px;
+    width: 128px;
+    left: 64px;
     cursor: default;
 }
 .hover_text19 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 15px;
-    width: 100px;
-    left: -60px;
+    top: 32px;
+    width: 128px;
+    left: -128px;
     cursor: default;
 }
 .hover_text20 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 13px;
-    width: 100px;
-    left: -60px;
+    top: 24px;
+    width: 120px;
+    left: -120px;
     cursor: default;
 }
 .hover_text21 p{
-    font-size: 12px;
+    font-size: 16px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: 10px;
-    width: 100px;
-    left: -60px;
+    top: 16px;
+    width: 128px;
+    left: -128px;
     cursor: default;
 }
 .explain {
@@ -687,16 +722,24 @@ height: auto;
     transform: translateY(-50%);
 }
 .text_ex {
-    font-size: 18px;
+    font-size: 20px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     color: rgb(216, 206, 226);
     position: absolute;
-    top: -25%;
-    width: 310px;
+    top: -24%;
+    width: 344px;
     left: 50%;
     transform: translateX(-50%);
     cursor: default;
+    animation: blink 8s infinite;
+    text-shadow: 
+    0 0 4px rgba(255, 255, 255, 0.8),
+    0 0 16px rgba(216, 206, 226, 0.6),
+    0 0 32px rgba(216, 206, 226, 0.4),
+    0 0 48px rgba(38, 6, 86, 0.8),
+    0 0 80px rgba(61, 11, 95, 0.6),
+    0 0 100px rgba(65, 21, 109, 0.4);
 }
 .e_story {
     /* position: absolute; */
@@ -765,4 +808,13 @@ height: auto;
       top: 25px;
     }
   }
-  
+  @keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0.08; }
+    100% { opacity: 1; }
+}
+@keyframes shining {
+    40% { opacity: 1; }
+    80% { opacity: 0.8; }
+    100% { opacity: 1; }
+}
